# grizzly-25-26

./: .gitignore  CMakeLists.txt  README.md  README_INSTALL.md  README_TEST_RUNNER.md  build.sh  grizzly.py  install_grizzly.sh  installer.py  run.py  run.sh  run_tests.py  test.txt
.colcon/: defaults.yaml
.github/: CODEOWNERS
.github/workflows/: main.yml  release.yml
control/include/arduino/science/: dummy.txt
core/include/: component.hpp  component_manager.hpp  config.hpp  event_bus.hpp  health.hpp  logging.hpp  scheduler.hpp  time.hpp  topic.hpp
core/src/: component.cpp  event_bus.cpp  main.cpp
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LIFECYCLE_MANAGER.md  PERCEPTION_SYSTEM.md  README.md  ROS_REFERENCE.md  STATE_MACHINE_GUIDE.md  STATE_MACHINE_SUMMARY.md  STATE_MANAGEMENT_GUIDE.md  TESTING.md  TEST_DETAILS.md  WEB_INTERFACE.md  _sidebar.md  index.html
documentation/controllers/: ControllerClass.md  CoreBasics.md
examples/: perception_state_demo.py  state_machine_example.py
grizzly/: package.xml  setup.cfg  setup.py
grizzly/grizzly/: test_node.py
grizzly_command/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  NODE_FILTERING.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  TAB_SYSTEM.md  index.html  index.html.original
grizzly_command/css/: styles.css  styles.css.backup
grizzly_command/js/: app.js.backup  main.js
grizzly_command/js/core/: config.js
grizzly_command/js/monitoring/: health-monitor.js
grizzly_command/js/ros/: connection.js  services.js  subscribers.js
grizzly_command/js/ui/: health-display.js  history.js  notifications.js  state-display.js  tab-manager.js  terminal-output.js
grizzly_command/js/utils/: helpers.js
grizzly_interfaces/: CMakeLists.txt  package.xml
grizzly_interfaces/msg/: NodeStatus.msg  OperationalState.msg  PerceptionState.msg
grizzly_interfaces/srv/: ChangeState.srv
grizzly_stack/: __init__.py  package.xml  setup.cfg  setup.py
grizzly_stack/config/: control.yaml  core.yaml  layers.yaml  perception.yaml  planner.yaml
grizzly_stack/core/: __init__.py  system_manager.py
grizzly_stack/launch/: grizzly_minimal.launch.py
grizzly_stack/src/grizzly_stack/: __init__.py
grizzly_stack/src/grizzly_stack/control/: __init__.py  control_node.py  motor_controller.py  new_motor_controller.py
grizzly_stack/src/grizzly_stack/core/: __init__.py  base_node.py  layer_manager.py  lifecycle_manager.py  system_manager.py  utils.py
grizzly_stack/src/grizzly_stack/examples/: __init__.py  simple_node.py
grizzly_stack/src/grizzly_stack/perception/: __init__.py  camera_node.py  perception_node.py
grizzly_stack/src/grizzly_stack/planner/: __init__.py  path_planner.py  planner_node.py
grizzly_stack/test/: __init__.py  test_core.py  test_lifecycle_manager.py  test_perception_node.py  test_system_manager.py
include/grizzly/core/bus/: scheduler.hpp
include/grizzly/core/runtime/: scheduler.hpp
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/grizzly_interfaces/include/grizzly_interfaces/grizzly_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/grizzly_interfaces/include/grizzly_interfaces/grizzly_interfaces/msg/detail/: perception_state__rosidl_typesupport_introspection_c.h  perception_state__traits.hpp  perception_state__type_support.hpp
install/grizzly_interfaces/lib/: libgrizzly_interfaces__rosidl_generator_c.dylib  libgrizzly_interfaces__rosidl_generator_py.dylib  libgrizzly_interfaces__rosidl_typesupport_c.dylib  libgrizzly_interfaces__rosidl_typesupport_cpp.dylib  libgrizzly_interfaces__rosidl_typesupport_fastrtps_c.dylib  libgrizzly_interfaces__rosidl_typesupport_fastrtps_cpp.dylib  libgrizzly_interfaces__rosidl_typesupport_introspection_c.dylib  libgrizzly_interfaces__rosidl_typesupport_introspection_cpp.dylib
install/grizzly_interfaces/share/ament_index/resource_index/parent_prefix_path/: grizzly_interfaces
install/grizzly_interfaces/share/grizzly_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/grizzly_interfaces/share/grizzly_interfaces/cmake/: export_grizzly_interfaces__rosidl_generator_cExport-noconfig.cmake  export_grizzly_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_grizzly_interfaces__rosidl_generator_pyExport.cmake  export_grizzly_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  grizzly_interfaces__rosidl_typesupport_cppExport.cmake  grizzly_interfaces__rosidl_typesupport_introspection_cExport.cmake  grizzly_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/grizzly_interfaces/share/grizzly_interfaces/msg/: PerceptionState.msg
install/grizzly_stack/lib/grizzly_stack/: arm_controller  arm_planner  central_perception  drive_controller  drive_planner  fusion_planner  science_controller  science_planner  system_manager  telemetry_unit
install/grizzly_stack/share/grizzly_stack/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/grizzly/: main.cpp
src/grizzly/core/bus/: scheduler.cpp
src/grizzly/core/runtime/: scheduler.cpp
