<?xml version="1.0"?>
<package format="3">
  <name>grizzly_stack</name>
  <version>0.1.0</version>
  <description>Single-package stack for Grizzly: core, perception, planning, control, telemetry.</description>
  <maintainer email="you@washu.edu">Grizzly Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>grizzly_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
